css/components/choice.css
[data-component~="choice"] {
    margin: 5px 0;
    margin-bottom: 15px;
    position: relative;
    font-size: var(--font-size);
    line-height: var(--line-height);
    cursor: pointer;
    margin-left: -2px;
    padding-left: 26px;
    color: #888;
}

[data-component~="choice"].hide {
    display: none;
}

[data-component~="choice"] p {
    margin: 0;
    padding: 8px;
    padding-right: 40px;
}

[data-component~="choice"]:after {
    --bubble-height: 20px;
    content: '';
    display: block;
    width: var(--bubble-height);
    height: var(--bubble-height);
    border-radius: 50%;
    border: 1px solid var(--twitter-bar-color);
    position: absolute;
    top: 50%;
    margin-top: calc(-1 * (var(--bubble-height) / 2));
    right: 5px;
}

[data-component~="choice"].selected {
    color: var(--twitter-black-text);
}

[data-component~="choice"].selected:after {
    content: '✔';
    color: var(--twitter-blue-link);
    font-weight: bold;
    text-align: center;
    font-size: 25px;
    line-height: 0.6;
}

[data-component~="choice"] nav ul {
    list-style: none;
    margin: 0;
    padding: 0;
    /* border-bottom: 1px solid var(--twitter-bar-color); */
}

[data-component~="choice"] nav ul li {
    display: inline-block;
}

[data-component~="choice"] nav ul a {
    padding: 5px 7px;
    margin: 0px 2px;
    margin-bottom: 2px;
    display: block;
    text-decoration: none;
    font-size: var(--font-size);
    color: var(--twitter-black-text);
    background: var(--twitter-bar-color);
    border-radius: 5px;
}

[data-component~="choice"] #choice-response {
    margin: 0;
    border: 0;
    width: calc(100% - 50px);
    height: 60px;
    font-size: var(--font-size);
    line-height: var(--line-height);
    box-sizing: border-box;
    padding: 8px;
    color: var(--twitter-black-text);
}

[data-component~="choice"] #choice-response:focus {
    outline: 0;
}

